--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,8 +1,8 @@
 ﻿
     <ul class="nav navbar-nav collapse navbar-collapse">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
         <li class="dropdown">
-            <a href="#">Shop<i class="fa fa-angle-down"></i></a>
+            <a asp-controller="Home" asp-action="Index">Shop<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
                 <li><a href="shop.html">Products</a></li>
                 <li><a href="product-details.html">Product Details</a></li>
@@ -12,10 +12,10 @@
             </ul>
         </li>
         <li class="dropdown">
-            <a href="#">Blog<i class="fa fa-angle-down"></i></a>
+            <a asp-controller="Home" asp-action="Index">Blog<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a href="blog.html">Blog List</a></li>
-                <li><a href="blog-single.html">Blog Single</a></li>
+                <li><a asp-controller="Home" asp-action="Blog">Blog List</a></li>
+                <li><a asp-controller="Home" asp-action="BlogSingle">Blog Single</a></li>
             </ul>
         </li>
         <li><a asp-controller="Home" asp-action="Error404">404</a></li>
