Наполнение представления Blog

--- a/WebStore/Views/OtherPages/Blog/Blog.cshtml
+++ b/WebStore/Views/OtherPages/Blog/Blog.cshtml
@@ -1,5 +1,13 @@
-﻿
-@{
-    ViewData["Title"] = "Blog";
-}
-
+﻿<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="logo pull-left">
+                <a href="index.html"><img src="images/home/logo.png" alt="" /></a>
+            </div>
+         <partial name="Partial/_BtnGroup" />
+        </div>
+        <div class="col-sm-8">
+           <partial name="Partial/_ShopMenu" />
+        </div>
+    </div>
+</div>
