--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -2,24 +2,24 @@
     <ul class="nav navbar-nav collapse navbar-collapse">
         <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
         <li class="dropdown">
-            <a asp-controller="Home" asp-action="Index">Shop<i class="fa fa-angle-down"></i></a>
+            <a asp-controller="Shop" asp-action="Shop">Shop<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a href="shop.html">Products</a></li>
-                <li><a href="product-details.html">Product Details</a></li>
-                <li><a href="checkout.html">Checkout</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a asp-controller="Shop" asp-action="Shop">Products</a></li>
+                <li><a asp-controller="ProductDetails" asp-action="ProductDetails">Product Details</a></li>
+                <li><a asp-controller="Checkout" asp-action="Checkout">Checkout</a></li>
+                <li><a asp-controller="Cart" asp-action="Cart">Cart</a></li>
+                <li><a asp-controller="Login" asp-action="Login">Login</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a asp-controller="Home" asp-action="Index">Blog<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller="Home" asp-action="Blog">Blog List</a></li>
-                <li><a asp-controller="Home" asp-action="BlogSingle">Blog Single</a></li>
+                <li><a asp-controller="Blog" asp-action="Blog">Blog List</a></li>
+                <li><a asp-controller="BlogSingle" asp-action="BlogSingle">Blog Single</a></li>
             </ul>
         </li>
-        <li><a asp-controller="Home" asp-action="Error404">404</a></li>
-        <li><a href="contact-us.html">Contact</a></li>
+        <li><a asp-controller="Error404" asp-action="Error404">404</a></li>
+        <li><a asp-controller="ContactUs" asp-action="ContactUs">Contact</a></li>
         <li>
             <a asp-controller="Employees" asp-action="Index">Сотрудники</a>
         </li>
