--- a/WebStore/Views/BlogSingle/BlogSingle.cshtml
+++ b/WebStore/Views/BlogSingle/BlogSingle.cshtml
@@ -1,6 +1,31 @@
-﻿
-@{
-    ViewData["Title"] = "BlogSingle";
-}
+﻿<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                
+                <partial name="Partial/_LeftSideBar" />
+            </div>
+            <div class="col-sm-9">
+                <div class="blog-post-area">
+                    <h2 class="title text-center">Latest From our Blog</h2>
+                    
+                    <partial name="Partial/_SingleBlogPost" />
+                </div><!--/blog-post-area-->
 
+               <!--/rating-area-->
+                <partial name="Partial/_RatingArea" />
+
+                <!--/socials-share-->
+                <partial name="Partial/_SocialsShare" />
+
+                <!--Comments-->
+                <partial name="Partial/_MediaComments" />
+                <!--/Response-area-->
+                <partial name="Partial/_ResponseArea" />
+                <!--/Repaly Box-->
+                <partial name="Partial/_ReplayBox" />
+            </div>
+        </div>
+    </div>
+</section>
 
