Наполнение представления Checkout

--- a/WebStore/Views/Checkout/Checkout.cshtml
+++ b/WebStore/Views/Checkout/Checkout.cshtml
@@ -1,7 +1,23 @@
-﻿
-@{
-    ViewData["Title"] = "Checkout";
-}
+﻿<section id="cart_items">
+    <div class="container">
+        <!--/breadcrums-->
+        <partial name="Partial/_Breadcrumbs" />
 
+        
+        <partial name="Partial/_StepOne" />
+        <!--/checkout-options-->
+        <partial name="Partial/_Options" />
 
+        <!--/register-req-->
+        <partial name="Partial/_RegisterReq" />
 
+        
+        <partial name="Partial/_ShopperInfo" />
+        
+        <partial name="Partial/_Payment"/>
+        
+        <partial name="Partial/_CartInfo" />
+        
+        <partial name="Partial/_PaymentOptions" />
+    </div>
+</section> <!--/#cart_items-->
