--- a/WebStore/Views/ProductDetails/Partial/_ProductDetails.cshtml
+++ b/WebStore/Views/ProductDetails/Partial/_ProductDetails.cshtml
@@ -2,7 +2,7 @@
     <!--product-details-->
     <div class="col-sm-5">
         <div class="view-product">
-            <img src="images/product-details/1.jpg" alt="" />
+            <img src="~/images/product-details/1.jpg" alt="" />
             <h3>ZOOM</h3>
         </div>
         <div id="similar-product" class="carousel slide" data-ride="carousel">
