--- a/WebStore/Views/Shop/Shop.cshtml
+++ b/WebStore/Views/Shop/Shop.cshtml
@@ -1,6 +1,21 @@
-﻿
-@{
-    ViewData["Title"] = "Shop";
-}
+﻿<section id="advertisement">
+    <div class="container">
+        <img src="~/images/shop/advertisement.jpg" alt="" />
+    </div>
+</section>
 
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                
+                <partial name="Partial/_LeftSideBar" />
+            </div>
 
+            <div class="col-sm-9 padding-right">
+                <!--features_items-->
+                <partial name="Partial/_FeaturesItems" />
+            </div>
+        </div>
+    </div>
+</section>
