Группировка представления Blog

--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -14,8 +14,8 @@
         <li class="dropdown">
             <a asp-controller="Home" asp-action="Index">Blog<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller="Blog" asp-action="Blog">Blog List</a></li>
-                <li><a asp-controller="BlogSingle" asp-action="BlogSingle">Blog Single</a></li>
+                <li><a asp-controller="Blog">Blog List</a></li>
+                <li><a asp-controller="Blog" asp-action="BlogSingle">Blog Single</a></li>
             </ul>
         </li>
         <li><a asp-controller="Error404" asp-action="Error404">404</a></li>
