--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,14 +1,14 @@
 ﻿
     <ul class="nav navbar-nav collapse navbar-collapse">
-        <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
+        <li><a asp-controller="Home"  class="active">Home</a></li>
         <li class="dropdown">
-            <a asp-controller="Shop" asp-action="Shop">Shop<i class="fa fa-angle-down"></i></a>
+            <a asp-controller="Shop">Shop<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller="Shop" asp-action="Shop">Products</a></li>
-                <li><a asp-controller="ProductDetails" asp-action="ProductDetails">Product Details</a></li>
-                <li><a asp-controller="Checkout" asp-action="Checkout">Checkout</a></li>
-                <li><a asp-controller="Cart" asp-action="Cart">Cart</a></li>
-                <li><a asp-controller="Login" asp-action="Login">Login</a></li>
+                <li><a asp-controller="Shop">Products</a></li>
+                <li><a asp-controller="Shop" asp-action="ProductDetails">Product Details</a></li>
+                <li><a asp-controller="Shop" asp-action="Checkout">Checkout</a></li>
+                <li><a asp-controller="Shop" asp-action="Cart">Cart</a></li>
+                <li><a asp-controller="Shop" asp-action="Login">Login</a></li>
             </ul>
         </li>
         <li class="dropdown">
@@ -19,7 +19,7 @@
             </ul>
         </li>
         <li><a asp-controller="Error404" asp-action="Error404">404</a></li>
-        <li><a asp-controller="ContactUs" asp-action="ContactUs">Contact</a></li>
+        <li><a asp-controller="Shop" asp-action="ContactUs">Contact</a></li>
         <li>
             <a asp-controller="Employees" asp-action="Index">Сотрудники</a>
         </li>
