Создание отдельного контроллера для contact

--- a/WebStore/Views/Contact/Index.cshtml
+++ b/WebStore/Views/Contact/Index.cshtml
@@ -12,7 +12,7 @@
                 <partial name="Partial/_ContactForm" />
             </div>
             <div class="col-sm-4">
-                <partial name="Partial/_ContatcInfo" />
+                <partial name="Partial/_ContactInfo" />
                 
             </div>
         </div>
