--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -2,7 +2,7 @@
     <ul class="nav navbar-nav collapse navbar-collapse">
         <li><a asp-controller="Home"  class="active">Home</a></li>
         <li class="dropdown">
-            <a asp-controller="Shop">Shop<i class="fa fa-angle-down"></i></a>
+            <a >Shop<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
                 <li><a asp-controller="Shop">Products</a></li>
                 <li><a asp-controller="Shop" asp-action="ProductDetails">Product Details</a></li>
@@ -19,7 +19,7 @@
             </ul>
         </li>
         <li><a asp-controller="Error404" asp-action="Error404">404</a></li>
-        <li><a asp-controller="Shop" asp-action="ContactUs">Contact</a></li>
+        <li><a asp-controller="Contact">Contact</a></li>
         <li>
             <a asp-controller="Employees" asp-action="Index">Сотрудники</a>
         </li>
