--- a/WebStore/Views/_ViewImports.cshtml
+++ b/WebStore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebStore
 @using WebStore.Models
+@using WebStore.ViewModel
 @addTagHelper*, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper*, WebStore
