Добавлегние контроллера каталога товаров

--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -4,7 +4,7 @@
         <li class="dropdown">
             <a >Shop<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller="Shop">Products</a></li>
+                <li><a asp-controller="Catalog" asp-action="Shop">Products</a></li>
                 <li><a asp-controller="Shop" asp-action="ProductDetails">Product Details</a></li>
                 <li><a asp-controller="Shop" asp-action="Checkout">Checkout</a></li>
                 <li><a asp-controller="Shop" asp-action="Cart">Cart</a></li>
