--- a/WebStore/Views/Catalog/Shop.cshtml
+++ b/WebStore/Views/Catalog/Shop.cshtml
@@ -1,15 +1,16 @@
-﻿<partial name="Partial/_Slider" />
+﻿@model CatalogViewModel
+
+<partial name="Partial/_Advertisement" />
+
 <section>
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
                 <partial name="Partial/_LeftSideBar" />
-             </div>
+            </div>
 
             <div class="col-sm-9 padding-right">
-                @*<partial name="Partial/_FeaturesItems" /> *@
-                <partial name="Partial/_CategoryTab" />
-                <partial name="Partial/_RecommendedItems" />
+                <partial name="Partial/_FeaturesItems" model="Model.Products" />
             </div>
         </div>
     </div>
