--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -1,49 +1,48 @@
-﻿
-@model IEnumerable<Employee>
+﻿@model IEnumerable<WebStore.Domain.Entities.Employees.Employee>
 @{
     ViewData["Title"] = "Index";
 }
-    <div class="container">
-        <a asp-action="Edit" class="btn btn-success">Создать</a>
+<div class="container">
+    <a asp-action="Edit" class="btn btn-success">Создать</a>
 
-        <hr />
-        <table class="table">
-            <thead>
+    <hr />
+    <table class="table">
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>Фамилия</th>
+                <th>Имя</th>
+                <th>Отчество</th>
+                <th>Возраст</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
                 <tr>
-                    <th>id</th>
-                    <th>Фамилия</th>
-                    <th>Имя</th>
-                    <th>Отчество</th>
-                    <th>Возраст</th>
-                    <th></th>
+                    <td>
+                        <a asp-controller="Employees" asp-action="EmployeeDetails" asp-route-id="@employee.Id">
+                            <i class="fa fa-info-circle"></i>
+                        </a>
+                    </td>
+                    <td>@employee.Id</td>
+                    <td>@employee.Surname</td>
+                    <td>@employee.FirstName</td>
+                    <td>@employee.Patronymic</td>
+                    <td>@employee.Age</td>
+                    <td>
+                        <a asp-controller="Employees" asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-success">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                        <a asp-controller="Employees" asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-danger">
+                            <i class="fa fa-trash-o"></i>
+                        </a>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var employee in Model)
-                {
-                    <tr>
-                        <td>
-                            <a asp-controller="Employees" asp-action="EmployeeDetails" asp-route-id="@employee.Id">
-                                <i class="fa fa-info-circle"></i>
-                            </a>
-                        </td>
-                        <td>@employee.Id</td>
-                        <td>@employee.Surname</td>
-                        <td>@employee.FirstName</td>
-                        <td>@employee.Patronymic</td>
-                        <td>@employee.Age</td>
-                        <td>
-                            <a asp-controller="Employees" asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-success">
-                                <i class="fa fa-edit"></i>
-                            </a>
-                            <a asp-controller="Employees" asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-danger">
-                                <i class="fa fa-trash-o"></i>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+            }
+        </tbody>
+    </table>
+</div>
 
 
