--- a/WebStore/Views/Account/Register.cshtml
+++ b/WebStore/Views/Account/Register.cshtml
@@ -1,7 +1,32 @@
-﻿
-@{
-    ViewData["Title"] = "Register";
-}
+﻿@model WebStore.ViewModel.Identity.RegisterUserViewModel
+<section id="form">
+    <!--form-->
+    <div class="container">
+        <div class="row">
+        
+            <div class="col-sm-1">
+                <h2 class="or">OR</h2>
+            </div>
+            <div class="col-sm-4">
+                <div class="signup-form">
+                    <!--sign up form-->
+                    <h2>Зарегистрироваться</h2>
+                    <form asp-action="Register" asp-antiforgery="true" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<h2>Register</h2>
+                        <input asp-for="UserName" placeholder="Имя пользователя" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
 
+                        <input asp-for="Password" placeholder="Пароль" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+
+                        <input asp-for="ConfirmPassword" placeholder="Повторить пароль" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+
+                        <button type="submit" class="btn btn-default">Зарегистрироваться</button>
+                    </form>
+                </div><!--/sign up form-->
+            </div>
+        </div>
+    </div>
+</section><!--/form-->
