--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -8,7 +8,7 @@
                 <li><a asp-controller="Shop" asp-action="ProductDetails">Product Details</a></li>
                 <li><a asp-controller="Shop" asp-action="Checkout">Checkout</a></li>
                 <li><a asp-controller="Shop" asp-action="Cart">Cart</a></li>
-                <li><a asp-controller="Shop" asp-action="Login">Login</a></li>
+                <li><a asp-controller="Account" asp-action="Register">Login</a></li>
             </ul>
         </li>
         <li class="dropdown">
