--- a/WebStore/Views/Account/Login.cshtml
+++ b/WebStore/Views/Account/Login.cshtml
@@ -8,14 +8,22 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Войти</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
+                    <form asp-action="Login" asp-antiforgery="true" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        @Html.HiddenFor(model => model.ReturnUrl)
+
+                        <input asp-for="UserName" placeholder="Имя пользователя" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+
+                        <input asp-for="Password" placeholder="Пароль" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+
                         <span>
-                            <input type="checkbox" class="checkbox">
-                            Keep me signed in
+                            <input asp-for="RememberMe" class="checkbox">
+                            Запомнить меня
                         </span>
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <button type="submit" class="btn btn-default">Вход</button>
                     </form>
                 </div><!--/login form-->
             </div>
