Страница ошибки доступа

--- a/WebStore/Views/Account/AccessDenied.cshtml
+++ b/WebStore/Views/Account/AccessDenied.cshtml
@@ -1,7 +1,5 @@
-﻿
-@{
-    ViewData["Title"] = "AccessDenied";
-}
-
-<h2>Login</h2>
+﻿<div class="container">
+    <p class="text-danger">Ошибка доступа</p>
+    <a asp-controller="Home" >На главную страницу</a>
+</div>
 
