--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @using WebStore.Infrastructure
 @inject IProductData ProductData
+@using WebStore.Infrastructure.Mapping
 
 <partial name="Partial/_Slider" />
 <section>
@@ -11,7 +12,7 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-                <partial name="Partial/_FeaturesItems" model="ProductData.GetProducts().Take(6).Select(p => new ProductViewModel { Id = p.Id, Name = p.Name, Order = p.Order, Price = p.Price, ImageUrl = p.ImageUrl }).OrderBy(p => p.Order)" />
+                <partial name= "Partial/_FeaturesItems"  model= " ProductData.GetProducts().Take(6).ToView().OrderBy(p => p.Order)" />
 
                 <partial name="Partial/_CategoryTab" />
 
