--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -2,7 +2,7 @@
     <ul class="nav navbar-nav collapse navbar-collapse">
         <li><a asp-controller="Home"  class="active">Home</a></li>
         <li class="dropdown">
-            <a >Shop<i class="fa fa-angle-down"></i></a>
+            <a asp-controller="Catalog" asp-action="Shop">Shop<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
                 <li><a asp-controller="Catalog" asp-action="Shop">Products</a></li>
                 <li><a asp-controller="Shop" asp-action="ProductDetails">Product Details</a></li>
